--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cornerstonejs/calculate-suv": "^1.0.3",
+    "@cornerstonejs/core": "^1.10.4",
+    "@cornerstonejs/dicom-image-loader": "^1.10.4",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.10.4",
+    "@cornerstonejs/tools": "^1.10.4",
     "autoprefixer": "10.4.15",
+    "dcmjs": "^0.29.8",
+    "dicomweb-client": "^0.10.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
